--- a/manifest/spark-application-rbac/spark-application-rbac.yaml
+++ b/manifest/spark-application-rbac/spark-application-rbac.yaml
@@ -36,6 +36,12 @@ rules:
 - apiGroups: [""]
   resources: ["services"]
   verbs: ["*"]
+- apiGroups: [""]
+  resources: ["configmaps"]
+  verbs: ["*"]
+- apiGroups: [""]
+  resources: ["persistentvolumeclaims"]
+  verbs: ["*"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
