--- a/examples/spark-operator-with-webhook.yaml
+++ b/examples/spark-operator-with-webhook.yaml
@@ -43,7 +43,7 @@ spec:
           secretName: spark-webhook-certs
       containers:
       - name: sparkoperator
-        image: gcr.io/spark-operator/spark-operator:v1beta2-1.3.0-3.1.1
+        image: gauravkuber/spark-operator:latest
         imagePullPolicy: Always
         volumeMounts:
         - name: webhook-certs
