--- a/examples/spark-pi.yaml
+++ b/examples/spark-pi.yaml
@@ -16,15 +16,15 @@
 apiVersion: "sparkoperator.k8s.io/v1beta2"
 kind: SparkApplication
 metadata:
-  name: spark-pi
-  namespace: default
+  name: spark-pi1
+  namespace: spark
 spec:
   type: Scala
   mode: cluster
-  image: "gcr.io/spark-operator/spark:v3.1.1"
+  image: "gauravkuber/spark:sleepdriver"
   imagePullPolicy: Always
   mainClass: org.apache.spark.examples.SparkPi
-  mainApplicationFile: "local:///opt/spark/examples/jars/spark-examples_2.12-3.1.1.jar"
+  mainApplicationFile: "local:///opt/spark/examples/jars/spark-examples_2.12-3.2.0.jar"
   sparkVersion: "3.1.1"
   restartPolicy:
     type: Never
@@ -43,6 +43,10 @@ spec:
     volumeMounts:
       - name: "test-volume"
         mountPath: "/tmp"
+    #secrets:
+      #- name: delegationtoken
+      #  path: /mnt/secrets
+      #  secretType: HadoopDelegationToken
   executor:
     cores: 1
     instances: 1
@@ -52,3 +56,7 @@ spec:
     volumeMounts:
       - name: "test-volume"
         mountPath: "/tmp"
+    #secrets:
+    # - name: delegationtoken
+    #   path: /mnt/secrets
+    #   secretType: HadoopDelegationToken
