--- a/manifest/spark-operator-install/spark-operator.yaml
+++ b/manifest/spark-operator-install/spark-operator.yaml
@@ -39,7 +39,7 @@ spec:
       serviceAccountName: sparkoperator
       containers:
       - name: sparkoperator
-        image: gcr.io/spark-operator/spark-operator:v1beta2-1.3.0-3.1.1
+        image: gauravkuber/spark-operator:latest 
         imagePullPolicy: Always
         args:
         - -logtostderr
